{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 34,
  "lineage": "26b07579-419b-d304-6812-3da60c4bc151",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "vec_prd_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-018ee6adb57fee277",
            "arn": "arn:aws:ec2:ap-northeast-2:935875533840:elastic-ip/eipalloc-018ee6adb57fee277",
            "association_id": "eipassoc-091b0828eade472e2",
            "domain": "vpc",
            "id": "eipalloc-018ee6adb57fee277",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-04a7d342b1be6017a",
            "private_dns": "ip-10-250-1-127.ap-northeast-2.compute.internal",
            "private_ip": "10.250.1.127",
            "public_dns": "ec2-54-116-32-18.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.116.32.18",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "VEC-PRD-NAT-EIP"
            },
            "tags_all": {
              "Name": "VEC-PRD-NAT-EIP"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "vec_prd_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:935875533840:internet-gateway/igw-003e01551a6c9c192",
            "id": "igw-003e01551a6c9c192",
            "owner_id": "935875533840",
            "tags": {
              "Name": "VEC-PRD-IGW"
            },
            "tags_all": {
              "Name": "VEC-PRD-IGW"
            },
            "vpc_id": "vpc-054ab05901bc3fc8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "vec_prd_ngw_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-018ee6adb57fee277",
            "association_id": "eipassoc-091b0828eade472e2",
            "connectivity_type": "public",
            "id": "nat-015556e402530e556",
            "network_interface_id": "eni-04a7d342b1be6017a",
            "private_ip": "10.250.1.127",
            "public_ip": "54.116.32.18",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-029b5d6e337e08222",
            "tags": {
              "Name": "VEC-PRD-NAT-2A"
            },
            "tags_all": {
              "Name": "VEC-PRD-NAT-2A"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vec_prd_nat_eip",
            "aws_subnet.vec_prd_pub_subnet_2a",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vec_prd_pri_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-041f88896bd09a2361080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-015556e402530e556",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-041f88896bd09a236",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.vec_prd_nat_eip",
            "aws_nat_gateway.vec_prd_ngw_2a",
            "aws_route_table.vec_prd_pri_rt",
            "aws_subnet.vec_prd_pub_subnet_2a",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vec_prd_pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-003e01551a6c9c192",
            "id": "r-rtb-04f8a8447f088a5a21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04f8a8447f088a5a2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.vec_prd_igw",
            "aws_route_table.vec_prd_pub_rt",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vec_prd_pri_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:935875533840:route-table/rtb-041f88896bd09a236",
            "id": "rtb-041f88896bd09a236",
            "owner_id": "935875533840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-015556e402530e556",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VEC-PRD-RT-PRI"
            },
            "tags_all": {
              "Name": "VEC-PRD-RT-PRI"
            },
            "timeouts": null,
            "vpc_id": "vpc-054ab05901bc3fc8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "vec_prd_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:935875533840:route-table/rtb-04f8a8447f088a5a2",
            "id": "rtb-04f8a8447f088a5a2",
            "owner_id": "935875533840",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-003e01551a6c9c192",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VEC-PRD-RT-PUB"
            },
            "tags_all": {
              "Name": "VEC-PRD-RT-PUB"
            },
            "timeouts": null,
            "vpc_id": "vpc-054ab05901bc3fc8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vec_prd_bst_rt_associate_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068369fb809ddf003",
            "route_table_id": "rtb-04f8a8447f088a5a2",
            "subnet_id": "subnet-00a74e3e0daded99b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vec_prd_pub_rt",
            "aws_subnet.vec_prd_bst_subnet_2a",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vec_prd_pri_rt_associate_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019cbe5a99ad612bd",
            "route_table_id": "rtb-041f88896bd09a236",
            "subnet_id": "subnet-0f595304a09b1b8a9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vec_prd_pri_rt",
            "aws_subnet.vec_prd_pri_subnet_2a",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vec_prd_pri_rt_associate_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0769c7751c99982c9",
            "route_table_id": "rtb-041f88896bd09a236",
            "subnet_id": "subnet-09e647f730b9ce2da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vec_prd_pri_rt",
            "aws_subnet.vec_prd_pri_subnet_2c",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vec_prd_pub_rt_associate_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c181385932a9b337",
            "route_table_id": "rtb-04f8a8447f088a5a2",
            "subnet_id": "subnet-029b5d6e337e08222"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vec_prd_pub_rt",
            "aws_subnet.vec_prd_pub_subnet_2a",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "vec_prd_pub_rt_associate_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07bb61d44ce6c13a5",
            "route_table_id": "rtb-04f8a8447f088a5a2",
            "subnet_id": "subnet-05ea14c7259e88b4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.vec_prd_pub_rt",
            "aws_subnet.vec_prd_pub_subnet_2c",
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vec_prd_bst_subnet_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:935875533840:subnet/subnet-00a74e3e0daded99b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a74e3e0daded99b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935875533840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VEC-PRD-VPC-BESTION-PUB-2A",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "VEC-PRD-VPC-BESTION-PUB-2A",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-054ab05901bc3fc8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vec_prd_pri_subnet_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:935875533840:subnet/subnet-0f595304a09b1b8a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f595304a09b1b8a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "935875533840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VEC-PRD-VPC-TOMCAT-PRI-2A",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "VEC-PRD-VPC-TOMCAT-PRI-2A",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-054ab05901bc3fc8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vec_prd_pri_subnet_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:935875533840:subnet/subnet-09e647f730b9ce2da",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e647f730b9ce2da",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "935875533840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VEC-PRD-VPC-TOMCAT-PRI-2C",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "VEC-PRD-VPC-TOMCAT-PRI-2C",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-054ab05901bc3fc8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vec_prd_pub_subnet_2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:935875533840:subnet/subnet-029b5d6e337e08222",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.250.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-029b5d6e337e08222",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935875533840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VEC-PRD-VPC-NGINX-PUB-2A",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "VEC-PRD-VPC-NGINX-PUB-2A",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-054ab05901bc3fc8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vec_prd_pub_subnet_2c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:935875533840:subnet/subnet-05ea14c7259e88b4c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "10.250.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ea14c7259e88b4c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "935875533840",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "VEC-PRD-VPC-NGINX-PUB-2C",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "VEC-PRD-VPC-NGINX-PUB-2C",
              "kubernetes.io/cluster/terraform-eks-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-054ab05901bc3fc8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vec_prd_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vec_prd_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:935875533840:vpc/vpc-054ab05901bc3fc8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.250.0.0/16",
            "default_network_acl_id": "acl-0c75f2d902075de17",
            "default_route_table_id": "rtb-08e7049d9e5b194d5",
            "default_security_group_id": "sg-0864b663f69ea1523",
            "dhcp_options_id": "dopt-0c0a56ab2646e57ed",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-054ab05901bc3fc8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e7049d9e5b194d5",
            "owner_id": "935875533840",
            "tags": {
              "Name": "VEC-PRD-VPC"
            },
            "tags_all": {
              "Name": "VEC-PRD-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}